# Stock-workbench

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cls_telegraph.py  data_sources.yaml  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  run.sh  server.py  test_all_sources.py  test_sources.py
.trae/: mcp.json
.trae/skills/mirror-setup/: SKILL.md
core/: __init__.py  dedup.py  helpers.py  providers.py  registry.py  router.py  scheduler.py  storage.py  tdx_adapter.py  tiers.py  tool_providers.py  translate.py  ws_pusher.py
mcps/: _generate_all.py
mcps/_template/: server_template.py
mcps/company-mcp/: data_sources.yaml  server.py
mcps/company-mcp/.trae/: mcp.json
mcps/derivatives-mcp/: data_sources.yaml  server.py
mcps/derivatives-mcp/.trae/: mcp.json
mcps/derivatives-mcp/core/: helpers.py
mcps/finance-mcp/: data_sources.yaml  requirements.txt  server.py
mcps/finance-mcp/.trae/: mcp.json
mcps/finance-mcp/core/: translate.py
mcps/global-mcp/: data_sources.yaml  server.py
mcps/global-mcp/.trae/: mcp.json
mcps/global-mcp/core/: registry.py
mcps/global-mcp/sources/: international.py
mcps/news-mcp/: data_sources.yaml  server.py
mcps/news-mcp/.trae/: mcp.json
mcps/stock-mcp/: data_sources.yaml  server.py
mcps/stock-mcp/.trae/: mcp.json
sources/: __init__.py  cninfo.py  funds_indices.py  international.py  market_data.py  news.py  sectors.py  semiconductor.py  stock.py  xueqiu.py
