[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akshare-mcp"
version = "2.0.0"
description = "AKShare + AxData MCP Server - 金融数据 MCP 服务器"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HONY1233", email = "1747608470@qq.com"},
]
keywords = ["akshare", "axdata", "mcp", "finance", "stock", "fastmcp", "A股", "金融数据"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "akshare>=1.18.0",
    "fastmcp>=3.0.0",
    "pandas>=2.0.0",
    "curl_cffi>=0.7.0",
    "axdata>=0.1.0",
    "APScheduler>=3.10.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/HONY1233/Akshare-MCP"
Repository = "https://github.com/HONY1233/Akshare-MCP"
Issues = "https://github.com/HONY1233/Akshare-MCP/issues"

[project.scripts]
akshare-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
